Criado o SpringDoc swagger da aplicacao